kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        - name: app-volume
          persistentVolumeClaim:
            claimName: pvc
        - name: config-volume
          configMap:
            name: nginx-config
        - name: custom-config
          configMap:
            name: custom-config

      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /homework
              name: app-volume
            - mountPath: /etc/nginx/conf.d
              name: config-volume
            - mountPath: /homework/conf
              name: custom-config
          readinessProbe:
            httpGet:
              port: 8000
              path: '/index.html'

          lifecycle:
            preStop:
              exec:
                command: [ "rm", "-rf", "/homework/*" ]
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
