kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: homework

spec:
  type: ClusterIP
  selector:
    app: web

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
